# limits-of-ions

./: .gitignore  Cargo.toml  README.md  flake.nix  limits_of_ions.txt  results.txt  run.sh
results/: limits_of_ions_0kg_dead_weight.txt  limits_of_ions_100kg_dead_weight.txt  limits_of_ions_200kg_dead_weight.txt  limits_of_ions_300kg_dead_weight.txt  limits_of_ions_400kg_dead_weight.txt  limits_of_ions_500kg_dead_weight.txt
src/: consts.rs  main.rs
